# cookiecutter-django-package

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  MANIFEST.in  README.rst  boot_django.py  load_tests.py  makemigrations.py  requirements.txt  resetdb.sh  runserverplus.sh  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/sample_project/: settings.py  urls.py
{{cookiecutter.project_slug}}/{{ cookiecutter.app_slug }}/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
