[metadata]
name = {{ cookiecutter.project_name }}
version = 0.1.0
description = {{ cookiecutter.description }}
long_description = file:README.rst
url = {{ cookiecutter.repo_url }}
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Django
    Framework :: Django :: 4.0
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=4.0,<4.1
test_suite = load_tests.get_suite

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[isort]
line_length = 88
known_first_party = {{cookiecutter.project_slug}},{{cookiecutter.app_slug}},sample_project
multi_line_output = 3
default_section = THIRDPARTY
skip = venv/
skip_glob = **/migrations/*.py
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
